--- a/public/ant-fm/index.html
+++ b/public/ant-fm/index.html
@@ -1,3 +1,60 @@
-<p>The idea for Ant.FM came from me switching from listening to music on the free Spotify (with ads) to listening to music on Youtube. Youtube provides most music ad free, but requires me to re-visit the web page to select the next track.</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ant FM</title>
+    <link rel="stylesheet" href="/css/style.css" />
+  </head>
+  <body>
+    <div class="layout">
+      <header id="navigation" class="p-navigation l-sidenav">
+  <div class="p-navigation__logo">
+    <a class="p-navigation__item" href="#">
+      <img class="p-navigation__image" src="https://anthonydillon.com/images/ad_logo.jpg" alt="" width="95">
+    </a>
+  </div>
+
+  <nav class="p-navigation__nav" aria-label="Categories navigation">
+    <ul class="p-navigation__items">
+      <li class="p-navigation__item is-selected">
+        <a class="p-navigation__link" href="/">All</a>
+      </li>
+      <li class="p-navigation__item">
+        <a class="p-navigation__link" href="#">Development</a>
+      </li>
+      <li class="p-navigation__item">
+        <a class="p-navigation__link" href="#">Management</a>
+      </li>
+      <li class="p-navigation__item">
+        <a class="p-navigation__link" href="#">Cooking</a>
+      </li>
+      <li class="p-navigation__item">
+        <a class="p-navigation__link" href="#">Ideas</a>
+      </li>
+    </ul>
+
+    <ul class="p-navigation__items">
+      <li class="p-navigation__item">
+        <a class="p-navigation__link" href="#">@anthonydillon on Twitter</a>
+      </li>
+      <li class="p-navigation__item">
+        <a class="p-navigation__link" href="#">My work</a>
+      </li>
+      <li class="p-navigation__item">
+        <a class="p-navigation__link" href="#">About</a>
+      </li>
+    </ul>
+  </nav>
+</header>
+
+      <main class="l-main">
+        <h1>Ant FM</h1>
+        <article><p>The idea for Ant.FM came from me switching from listening to music on the free Spotify (with ads) to listening to music on Youtube. Youtube provides most music ad free, but requires me to re-visit the web page to select the next track.</p>
 <p>I wanted to build a site that can queue up youtube video’s and play them one after another. Whether it is the full album, top tracks from an artist or a playlist the user has created.</p>
 <p>The current build is at a very early stages: http://www.anthonydillon.com/ant.fm</p>
+</article>
+      </main>
+    </div>
+  </body>
+</html>
