--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@ layout: "base.html"
   <h1>All</h1>
   <p>
     I'm a software developer, and I'm passionate about building things that
-    people love. I'm currently working on a project called
+    people love.
   </p>
   <p>
     I have a passion for learning and teaching, and I'm always looking for
