--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
   <nav class="p-navigation__nav" aria-label="Categories navigation">
     <ul class="p-navigation__items">
       <li class="p-navigation__item is-selected">
-        <a class="p-navigation__link" href="#">All</a>
+        <a class="p-navigation__link" href="/">All</a>
       </li>
       <li class="p-navigation__item">
         <a class="p-navigation__link" href="#">Development</a>
@@ -54,7 +54,7 @@
   <h1>All</h1>
   <p>
     I'm a software developer, and I'm passionate about building things that
-    people love. I'm currently working on a project called
+    people love.
   </p>
   <p>
     I have a passion for learning and teaching, and I'm always looking for
