--- a/ant-fm/index.html
+++ b/ant-fm/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Thoughts from Anthony Dillon</title>
-  <link rel="stylesheet" href="/css/style.css" />
-</head>
-<body>
-  <div class="layout">
-    <header id="navigation" class="p-navigation l-sidenav">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ant FM</title>
+    <link rel="stylesheet" href="/css/style.css" />
+  </head>
+  <body>
+    <div class="layout">
+      <header id="navigation" class="p-navigation l-sidenav">
   <div class="p-navigation__logo">
     <a class="p-navigation__item" href="#">
       <img class="p-navigation__image" src="https://anthonydillon.com/images/ad_logo.jpg" alt="" width="95">
@@ -49,28 +48,13 @@
   </nav>
 </header>
 
-    <main>
-<div class="l-main">
-  <h1>All</h1>
-  <p>
-    I'm a software developer, and I'm passionate about building things that
-    people love.
-  </p>
-  <p>
-    I have a passion for learning and teaching, and I'm always looking for
-    new ways to improve myself. I'm a big fan of the leanweb community.
-  </p>
-
-  <hr />
-
-  
-  <a href='/ant-fm/' class="blog-single">
-    <p class="title">Ant FM</p>
-
-    <p class="description"></p>
-  </a>
-  
-</div></main>
-  </div>
-</body>
+      <main class="l-main">
+        <h1>Ant FM</h1>
+        <article><p>The idea for Ant.FM came from me switching from listening to music on the free Spotify (with ads) to listening to music on Youtube. Youtube provides most music ad free, but requires me to re-visit the web page to select the next track.</p>
+<p>I wanted to build a site that can queue up youtube video’s and play them one after another. Whether it is the full album, top tracks from an artist or a playlist the user has created.</p>
+<p>The current build is at a very early stages: http://www.anthonydillon.com/ant.fm</p>
+</article>
+      </main>
+    </div>
+  </body>
 </html>
