--- a/ant-fm/index.html
+++ b/ant-fm/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ant FM</title>
-    <link rel="stylesheet" href="/anthonydillon/css/style.css" />
+    <link rel="stylesheet" href="/anthonydillon.com/css/style.css" />
   </head>
   <body>
     <div class="layout">
