--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Thoughts from Anthony Dillon</title>
-  <link rel="stylesheet" href="/anthonydillon/css/style.css" />
+  <link rel="stylesheet" href="/anthonydillon.com/css/style.css" />
 </head>
 <body>
   <div class="layout">
