Update blog URL

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@ layout: "base.html"
   <hr />
 
   {% for post in collections.post reversed %}
-  <a href='{{post.url}}' class="blog-single">
+  <a href='{{ post.url | url }}' class="blog-single">
     <p class="title">{{ post.data.title }}</p>
 
     <p class="description">{{ post.data.description }}</p>
