deploy: 8d14bc064bf04f8a10d5530bdad209ba33823219

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Thoughts from Anthony Dillon</title>
   <link rel="stylesheet" href="/anthonydillon.com/css/style.css" />
+  <link rel="shortcut icon" href="https://anthonydillon.com/favicon.png">
 </head>
 <body>
   <div class="layout">
