--- a/index.html
+++ b/index.html
@@ -65,6 +65,12 @@
   <hr />
 
   
+  <a href='/anthonydillon.com/leading-distributed-teams/' class="blog-single">
+    <p class="title">Leading distributed teams</p>
+
+    <p class="description"></p>
+  </a>
+  
   <a href='/anthonydillon.com/ant-fm/' class="blog-single">
     <p class="title">Ant FM</p>
 
