--- a/leading-distributed-teams/index.html
+++ b/leading-distributed-teams/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Leading distributed teams</title>
     <link rel="stylesheet" href="/anthonydillon.com/css/style.css" />
+    <link rel="shortcut icon" href="https://anthonydillon.com/favicon.png">
   </head>
   <body>
     <div class="layout">
@@ -48,7 +49,7 @@
   </nav>
 </header>
 
-      <main class="l-main">
+      <main class="l-main p-article">
         <h1>Leading distributed teams</h1>
         <article><p>Hi my name is <strong>Ant</strong> and I have work at Canonical the company behind Ubuntu for over 10 years now. All of which I worked in the office. For the last 7 years I have been a manager of a mix of in office-based and remote team members.</p>
 <h2>Unexpected challenge over the last 12 months</h2>
