--- a/ant-fm/index.html
+++ b/ant-fm/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ant FM</title>
     <link rel="stylesheet" href="/anthonydillon.com/css/style.css" />
+    <link rel="shortcut icon" href="https://anthonydillon.com/favicon.png">
   </head>
   <body>
     <div class="layout">
@@ -48,7 +49,7 @@
   </nav>
 </header>
 
-      <main class="l-main">
+      <main class="l-main p-article">
         <h1>Ant FM</h1>
         <article><p>The idea for Ant.FM came from me switching from listening to music on the free Spotify (with ads) to listening to music on Youtube. Youtube provides most music ad free, but requires me to re-visit the web page to select the next track.</p>
 <p>I wanted to build a site that can queue up youtube video’s and play them one after another. Whether it is the full album, top tracks from an artist or a playlist the user has created.</p>
