deploy: f11474a506f2c7d9a0c60805cb2ff26201a612c6

--- a/about/index.html
+++ b/about/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ant FM</title>
-    <link rel="stylesheet" href="/anthonydillon.com/css/style.css" />
-    <link rel="shortcut icon" href="https://anthonydillon.com/favicon.png">
-  </head>
-  <body>
-    <div class="layout">
-      <header id="navigation" class="p-navigation l-navbar">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About Anthony Dillon</title>
+  <link rel="stylesheet" href="/anthonydillon.com/css/style.css" />
+  <link rel="shortcut icon" href="https://anthonydillon.com/favicon.png">
+</head>
+<body>
+  <div class="layout">
+    <header id="navigation" class="p-navigation l-navbar">
   <div class="p-navigation__toggle">
     <button class="p-navigation__toggle-button" type="button" aria-label="Toggle navigation">
       Menu
@@ -64,13 +65,13 @@
   </script>
 </header>
 
-      <main class="l-main p-article">
-        <h1>Ant FM</h1>
-        <article><p>The idea for Ant.FM came from me switching from listening to music on the free Spotify (with ads) to listening to music on Youtube. Youtube provides most music ad free, but requires me to re-visit the web page to select the next track.</p>
-<p>I wanted to build a site that can queue up youtube video’s and play them one after another. Whether it is the full album, top tracks from an artist or a playlist the user has created.</p>
-<p>The current build is at a very early stages: http://www.anthonydillon.com/ant.fm</p>
-</article>
-      </main>
-    </div>
-  </body>
+    <main class="l-main">
+<div class="l-main">
+  <h1>About me</h1>
+  <p>
+    Anthony Dillon is a Director of Engineering at Canonical. He leads the Web engineering teams, where he helps a rapidly-growing organisation scale its architecture and engineering practices. He is passionate about open source and excels in developing solid design systems to enable rapid, sustainable delivery through decentralised decision-making with a focus on results. When not working, Anthony enjoys running, playing football and spending time with his family.
+  </p>
+</div></main>
+  </div>
+</body>
 </html>
