--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </div>
 
   <div class="p-navigation__logo">
-    <a class="p-navigation__item" href="#">
+    <a class="p-navigation__item" href="/">
       <img class="p-navigation__image" src="https://anthonydillon.com/images/ad_logo.jpg" alt="" width="95">
     </a>
   </div>
@@ -29,28 +29,28 @@
         <a class="p-navigation__link" href="/">All</a>
       </li>
       <li class="p-navigation__item">
-        <a class="p-navigation__link" href="#">Development</a>
+        <a class="p-navigation__link" href="/engineering">Engineering</a>
       </li>
       <li class="p-navigation__item">
-        <a class="p-navigation__link" href="#">Management</a>
+        <a class="p-navigation__link" href="/management">Management</a>
       </li>
       <li class="p-navigation__item">
-        <a class="p-navigation__link" href="#">Cooking</a>
+        <a class="p-navigation__link" href="/cooking">Cooking</a>
       </li>
       <li class="p-navigation__item">
-        <a class="p-navigation__link" href="#">Ideas</a>
+        <a class="p-navigation__link" href="/ideas">Ideas</a>
       </li>
     </ul>
 
     <ul class="p-navigation__items">
       <li class="p-navigation__item">
-        <a class="p-navigation__link" href="#">@anthonydillon on Twitter</a>
+        <a class="p-navigation__link" href="/my-work">My work</a>
       </li>
       <li class="p-navigation__item">
-        <a class="p-navigation__link" href="#">My work</a>
+        <a class="p-navigation__link" href="/about">About</a>
       </li>
       <li class="p-navigation__item">
-        <a class="p-navigation__link" href="#">About</a>
+        <a class="p-navigation__link" href="https://twitter.com/anthonydillon">@anthonydillon on Twitter</a>
       </li>
     </ul>
   </nav>
