--- a/my-work/index.html
+++ b/my-work/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ant FM</title>
-    <link rel="stylesheet" href="/anthonydillon.com/css/style.css" />
-    <link rel="shortcut icon" href="https://anthonydillon.com/favicon.png">
-  </head>
-  <body>
-    <div class="layout">
-      <header id="navigation" class="p-navigation l-navbar">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Work from Anthony Dillon</title>
+  <link rel="stylesheet" href="/anthonydillon.com/css/style.css" />
+  <link rel="shortcut icon" href="https://anthonydillon.com/favicon.png">
+</head>
+<body>
+  <div class="layout">
+    <header id="navigation" class="p-navigation l-navbar">
   <div class="p-navigation__toggle">
     <button class="p-navigation__toggle-button" type="button" aria-label="Toggle navigation">
       Menu
@@ -64,13 +65,29 @@
   </script>
 </header>
 
-      <main class="l-main p-article">
-        <h1>Ant FM</h1>
-        <article><p>The idea for Ant.FM came from me switching from listening to music on the free Spotify (with ads) to listening to music on Youtube. Youtube provides most music ad free, but requires me to re-visit the web page to select the next track.</p>
-<p>I wanted to build a site that can queue up youtube video’s and play them one after another. Whether it is the full album, top tracks from an artist or a playlist the user has created.</p>
-<p>The current build is at a very early stages: http://www.anthonydillon.com/ant.fm</p>
-</article>
-      </main>
-    </div>
-  </body>
+    <main class="l-main">
+<div class="l-main">
+  <h1>My work</h1>
+  <p>
+    I have worked on many projects I am proud of. Here are some of my favourites. They range from past to current but I have learn't something new with each of them.
+  </p>
+
+  <hr />
+
+  
+  <a href='/anthonydillon.com/leading-distributed-teams/' class="blog-single">
+    <p class="title">Leading distributed teams</p>
+
+    <p class="description"></p>
+  </a>
+  
+  <a href='/anthonydillon.com/ant-fm/' class="blog-single">
+    <p class="title">Ant FM</p>
+
+    <p class="description"></p>
+  </a>
+  
+</div></main>
+  </div>
+</body>
 </html>
