deploy: 1e6b8a8d419b9f0fe69c52b8e98c93d6fc06b64d

--- a/engineering/index.html
+++ b/engineering/index.html
@@ -25,28 +25,28 @@
 
   <nav class="p-navigation__nav" aria-label="Categories navigation">
     <ul class="p-navigation__items">
-      <li class="p-navigation__item is-selected">
+      <li class="p-navigation__item" >
         <a class="p-navigation__link" href="/">All</a>
       </li>
-      <li class="p-navigation__item">
+      <li class="p-navigation__item" aria-current="page">
         <a class="p-navigation__link" href="/engineering">Engineering</a>
       </li>
-      <li class="p-navigation__item">
+      <li class="p-navigation__item" >
         <a class="p-navigation__link" href="/management">Management</a>
       </li>
-      <li class="p-navigation__item">
+      <li class="p-navigation__item" >
         <a class="p-navigation__link" href="/cooking">Cooking</a>
       </li>
-      <li class="p-navigation__item">
+      <li class="p-navigation__item" >
         <a class="p-navigation__link" href="/ideas">Ideas</a>
       </li>
     </ul>
 
     <ul class="p-navigation__items">
-      <li class="p-navigation__item">
+      <li class="p-navigation__item" >
         <a class="p-navigation__link" href="/my-work">My work</a>
       </li>
-      <li class="p-navigation__item">
+      <li class="p-navigation__item" >
         <a class="p-navigation__link" href="/about">About</a>
       </li>
       <li class="p-navigation__item">
