--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,13 @@ layout: "base.html"
 ---
 
 <div class="l-main">
-  <h1>All</h1>
+  <h1>Thoughts from Anthony Dillon</h1>
   <p>
-    I'm a software developer, and I'm passionate about building things that
-    people love. Working for Canonical.
+    I am a software developer, with a passion for building things that
+    people love to use. I working as an Director of Enginnering at Canonical.
   </p>
   <p>
-    I have a passion for learning and teaching, and I'm always looking for
+    I love to learn and teach others, I'm always looking for
     new ways to improve myself. I'm a big fan of the leanweb community.
   </p>
 
