--- a/index.html
+++ b/index.html
@@ -25,9 +25,6 @@
 
   <nav class="p-navigation__nav" aria-label="Categories navigation">
     <ul class="p-navigation__items">
-      <li class="p-navigation__item" aria-current="page">
-        <a class="p-navigation__link" href="/">All</a>
-      </li>
       <li class="p-navigation__item" >
         <a class="p-navigation__link" href="/engineering">Engineering</a>
       </li>
@@ -67,13 +64,13 @@
 
     <main class="l-main">
 <div class="l-main">
-  <h1>All</h1>
+  <h1>Thoughts from Anthony Dillon</h1>
   <p>
-    I'm a software developer, and I'm passionate about building things that
-    people love. Working for Canonical.
+    I am a software developer, with a passion for building things that
+    people love to use. I working as an Director of Enginnering at Canonical.
   </p>
   <p>
-    I have a passion for learning and teaching, and I'm always looking for
+    I love to learn and teach others, I'm always looking for
     new ways to improve myself. I'm a big fan of the leanweb community.
   </p>
 
