deploy: 8830ab747dfd243929af74813c00f1a79ce0f4dc

--- a/index.html
+++ b/index.html
@@ -77,6 +77,12 @@
   <hr />
 
   
+  <a href='/anthonydillon.com/surprising-css-selectors-you-can-use-today/' class="blog-single">
+    <p class="title">Surprising CSS selectors you can use today</p>
+
+    <p class="description"></p>
+  </a>
+  
   <a href='/anthonydillon.com/leading-distributed-teams/' class="blog-single">
     <p class="title">Leading distributed teams</p>
 
