--- a/engineering/index.html
+++ b/engineering/index.html
@@ -72,8 +72,8 @@
   <hr />
 
   
-  <a href='/anthonydillon.com/leading-distributed-teams/' class="blog-single">
-    <p class="title">Leading distributed teams</p>
+  <a href='/anthonydillon.com/surprising-css-selectors-you-can-use-today/' class="blog-single">
+    <p class="title">Surprising CSS selectors you can use today</p>
 
     <p class="description"></p>
   </a>
