--- a/index.html
+++ b/index.html
@@ -89,6 +89,12 @@
     <p class="description"></p>
   </a>
   
+  <a href='/anthonydillon.com/handling-class-attribute-in-beautifulsoup/' class="blog-single">
+    <p class="title">Handling “class” attribute in Beautifulsoup</p>
+
+    <p class="description"></p>
+  </a>
+  
   <a href='/anthonydillon.com/ant-fm/' class="blog-single">
     <p class="title">Ant FM</p>
 
