--- a/ideas/index.html
+++ b/ideas/index.html
@@ -26,25 +26,25 @@
   <nav class="p-navigation__nav" aria-label="Categories navigation">
     <ul class="p-navigation__items">
       <li class="p-navigation__item" >
-        <a class="p-navigation__link" href="/engineering">Engineering</a>
+        <a class="p-navigation__link" href="/anthonydillon.com/engineering/">Engineering</a>
       </li>
       <li class="p-navigation__item" >
-        <a class="p-navigation__link" href="/management">Management</a>
+        <a class="p-navigation__link" href="/anthonydillon.com/management/">Management</a>
       </li>
       <li class="p-navigation__item" >
-        <a class="p-navigation__link" href="/cooking">Cooking</a>
+        <a class="p-navigation__link" href="/anthonydillon.com/cooking/">Cooking</a>
       </li>
       <li class="p-navigation__item" aria-current="page">
-        <a class="p-navigation__link" href="/ideas">Ideas</a>
+        <a class="p-navigation__link" href="/anthonydillon.com/ideas/">Ideas</a>
       </li>
     </ul>
 
     <ul class="p-navigation__items">
       <li class="p-navigation__item" >
-        <a class="p-navigation__link" href="/my-work">My work</a>
+        <a class="p-navigation__link" href="/anthonydillon.com/my-work/">My work</a>
       </li>
       <li class="p-navigation__item" >
-        <a class="p-navigation__link" href="/about">About</a>
+        <a class="p-navigation__link" href="/anthonydillon.com/about/">About</a>
       </li>
       <li class="p-navigation__item">
         <a class="p-navigation__link" href="https://twitter.com/anthonydillon">@anthonydillon on Twitter</a>
