--- a/my-work/index.html
+++ b/my-work/index.html
@@ -18,7 +18,7 @@
   </div>
 
   <div class="p-navigation__logo">
-    <a class="p-navigation__item" href="/">
+    <a class="p-navigation__item" href="/anthonydillon.com/">
       <img class="p-navigation__image" src="https://anthonydillon.com/images/ad_logo.jpg" alt="" width="95">
     </a>
   </div>
