deploy: 8b3c52008b51913676bb2f82b33677da7835e758

--- a/management/index.html
+++ b/management/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mangement thoughts from Anthony Dillon</title>
-  <link rel="stylesheet" href="/anthonydillon.com/css/style.css" />
+  <link rel="stylesheet" href="/css/style.css" />
   <link rel="shortcut icon" href="https://anthonydillon.com/favicon.png">
 </head>
 <body>
@@ -18,7 +18,7 @@
   </div>
 
   <div class="p-navigation__logo">
-    <a class="p-navigation__item" href="/anthonydillon.com/">
+    <a class="p-navigation__item" href="/">
       <img class="p-navigation__image" src="https://anthonydillon.com/images/ad_logo.jpg" alt="" width="95">
     </a>
   </div>
@@ -26,25 +26,25 @@
   <nav class="p-navigation__nav" aria-label="Categories navigation">
     <ul class="p-navigation__items">
       <li class="p-navigation__item" >
-        <a class="p-navigation__link" href="/anthonydillon.com/engineering/">Engineering</a>
+        <a class="p-navigation__link" href="/engineering/">Engineering</a>
       </li>
       <li class="p-navigation__item" aria-current="page">
-        <a class="p-navigation__link" href="/anthonydillon.com/management/">Management</a>
+        <a class="p-navigation__link" href="/management/">Management</a>
       </li>
       <li class="p-navigation__item" >
-        <a class="p-navigation__link" href="/anthonydillon.com/cooking/">Cooking</a>
+        <a class="p-navigation__link" href="/cooking/">Cooking</a>
       </li>
       <li class="p-navigation__item" >
-        <a class="p-navigation__link" href="/anthonydillon.com/ideas/">Ideas</a>
+        <a class="p-navigation__link" href="/ideas/">Ideas</a>
       </li>
     </ul>
 
     <ul class="p-navigation__items">
       <li class="p-navigation__item" >
-        <a class="p-navigation__link" href="/anthonydillon.com/my-work/">My work</a>
+        <a class="p-navigation__link" href="/my-work/">My work</a>
       </li>
       <li class="p-navigation__item" >
-        <a class="p-navigation__link" href="/anthonydillon.com/about/">About</a>
+        <a class="p-navigation__link" href="/about/">About</a>
       </li>
       <li class="p-navigation__item">
         <a class="p-navigation__link" href="https://twitter.com/anthonydillon">@anthonydillon on Twitter</a>
@@ -72,7 +72,7 @@
   <hr />
 
   
-  <a href='/anthonydillon.com/leading-distributed-teams/' class="blog-single">
+  <a href='/leading-distributed-teams/' class="blog-single">
     <p class="title">Leading distributed teams</p>
 
     <p class="description"></p>
