--- a/leading-distributed-teams/index.html
+++ b/leading-distributed-teams/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Leading distributed teams</title>
-    <link rel="stylesheet" href="/anthonydillon.com/css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
     <link rel="shortcut icon" href="https://anthonydillon.com/favicon.png">
   </head>
   <body>
@@ -17,7 +17,7 @@
   </div>
 
   <div class="p-navigation__logo">
-    <a class="p-navigation__item" href="/anthonydillon.com/">
+    <a class="p-navigation__item" href="/">
       <img class="p-navigation__image" src="https://anthonydillon.com/images/ad_logo.jpg" alt="" width="95">
     </a>
   </div>
@@ -25,25 +25,25 @@
   <nav class="p-navigation__nav" aria-label="Categories navigation">
     <ul class="p-navigation__items">
       <li class="p-navigation__item" >
-        <a class="p-navigation__link" href="/anthonydillon.com/engineering/">Engineering</a>
+        <a class="p-navigation__link" href="/engineering/">Engineering</a>
       </li>
       <li class="p-navigation__item" >
-        <a class="p-navigation__link" href="/anthonydillon.com/management/">Management</a>
+        <a class="p-navigation__link" href="/management/">Management</a>
       </li>
       <li class="p-navigation__item" >
-        <a class="p-navigation__link" href="/anthonydillon.com/cooking/">Cooking</a>
+        <a class="p-navigation__link" href="/cooking/">Cooking</a>
       </li>
       <li class="p-navigation__item" >
-        <a class="p-navigation__link" href="/anthonydillon.com/ideas/">Ideas</a>
+        <a class="p-navigation__link" href="/ideas/">Ideas</a>
       </li>
     </ul>
 
     <ul class="p-navigation__items">
       <li class="p-navigation__item" >
-        <a class="p-navigation__link" href="/anthonydillon.com/my-work/">My work</a>
+        <a class="p-navigation__link" href="/my-work/">My work</a>
       </li>
       <li class="p-navigation__item" >
-        <a class="p-navigation__link" href="/anthonydillon.com/about/">About</a>
+        <a class="p-navigation__link" href="/about/">About</a>
       </li>
       <li class="p-navigation__item">
         <a class="p-navigation__link" href="https://twitter.com/anthonydillon">@anthonydillon on Twitter</a>
