--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Thoughts from Anthony Dillon</title>
   <link rel="stylesheet" href="/css/style.css" />
-  <link rel="shortcut icon" href="https://anthonydillon.com/favicon.png">
+  <link rel="shortcut icon" href="/img/favicon.png">
 </head>
 <body>
   <div class="layout">
@@ -19,7 +19,7 @@
 
   <div class="p-navigation__logo">
     <a class="p-navigation__item" href="/">
-      <img class="p-navigation__image" src="https://anthonydillon.com/images/ad_logo.jpg" alt="" width="95">
+      <img class="p-navigation__image" src="/img/logo.jpg" alt="" width="95">
     </a>
   </div>
 
