deploy: 132ea9b5fab52c47698fd46a9f1c152336864a5b

--- a/ant-fm/index.html
+++ b/ant-fm/index.html
@@ -18,7 +18,7 @@
 
   <div class="p-navigation__logo">
     <a class="p-navigation__item" href="/">
-      <img class="p-navigation__image" src="/img/logo.jpg" alt="" width="95">
+      <img class="p-navigation__image" src="/img/logo.jpg" alt="" width="95" aria-label="Go to homepage" />
     </a>
   </div>
 
