--- a/leading-distributed-teams/index.html
+++ b/leading-distributed-teams/index.html
@@ -18,7 +18,7 @@
 
   <div class="p-navigation__logo">
     <a class="p-navigation__item" href="/">
-      <img class="p-navigation__image" src="/img/logo.jpg" alt="" width="95">
+      <img class="p-navigation__image" src="/img/logo.jpg" alt="" width="95" aria-label="Go to homepage" />
     </a>
   </div>
 
