--- a/ideas/index.html
+++ b/ideas/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="Thoughts, ideas and learnings from a developer come manager. Anthony Dillon.">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ideas from Anthony Dillon</title>
