--- a/surprising-css-selectors-you-can-use-today/index.html
+++ b/surprising-css-selectors-you-can-use-today/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Surprising CSS selectors you can use today</title>
     <link rel="stylesheet" href="/css/style.css" />
-    <link rel="shortcut icon" href="/favicon.png">
+    <link rel="shortcut icon" href="/img/favicon.png">
   </head>
   <body>
     <div class="layout">
