deploy: fa38501629b7de3cfc8c2d5948e769f58dae00da

--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
   <hr />
 
   
+  <a href='/tips-and-tricks/' class="blog-single">
+    <p class="title">Tips and tricks</p>
+  </a>
+  
   <a href='/surprising-css-selectors-you-can-use-today/' class="blog-single">
     <p class="title">Surprising CSS selectors you can use today</p>
   </a>
