--- a/engineering/index.html
+++ b/engineering/index.html
@@ -73,6 +73,12 @@
   <hr />
 
   
+  <a href='/tips-and-tricks/' class="blog-single">
+    <p class="title">Tips and tricks</p>
+
+    <p class="description"></p>
+  </a>
+  
   <a href='/surprising-css-selectors-you-can-use-today/' class="blog-single">
     <p class="title">Surprising CSS selectors you can use today</p>
 
