deploy: cee29f5009ae20a7951aa4618a09c5ee67031512

--- a/management/index.html
+++ b/management/index.html
@@ -73,6 +73,12 @@
   <hr />
 
   
+  <a href='/refocusing-on-1-1/' class="blog-single">
+    <p class="title">Refocusing on 1:1s</p>
+
+    <p class="description"></p>
+  </a>
+  
   <a href='/leading-distributed-teams/' class="blog-single">
     <p class="title">Leading distributed teams</p>
 
