--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
     <p class="title">Surprising CSS selectors you can use today</p>
   </a>
   
+  <a href='/refocusing-on-1-1/' class="blog-single">
+    <p class="title">Refocusing on 1:1s</p>
+  </a>
+  
   <a href='/leading-distributed-teams/' class="blog-single">
     <p class="title">Leading distributed teams</p>
   </a>
