--- a/refocusing-on-1-1/index.html
+++ b/refocusing-on-1-1/index.html
@@ -63,7 +63,7 @@
 
       <main class="l-main p-article">
         <h1>Refocusing on 1:1s</h1>
-        <article><p>I have been grappling with the desire to improve my 1:1 meetings recently. A a manager I want 1:1 meetings to focus on the needs of my reports and not be a status or progress report of their current work. But I don't want to burden anyone with preparing an agenda and no-agenda meeting can cause anxiety. So here are some areas I will try and touch on each week.</p>
+        <article><p>I have been grappling with the desire to improve my 1:1 meetings recently. As a manager, I want 1:1 meetings to focus on the needs of my reports and not be a status or progress report of their current work. But I don't want to burden anyone with preparing an agenda and no-agenda meeting can cause anxiety. So here are some areas I will try and touch on each week.</p>
 <ol>
 <li><strong>Wellness</strong>: Are you safe and well? You needn’t disclose personal information, but I’m here to listen, especially if work is impacting your well-being. Do you feel physically and psychologically safe, is your work/life balance compatible with your mental health?</li>
 <li><strong>Readiness</strong>: Are you set up to succeed? Do you have what you need to meet your goals, starting with a clear understanding of what those are? What resources (material, support, or even just help and advice) might I provide that could help you be successful?</li>
