deploy: 11ed4d6f887ea42e5881bc6feec5d22ac934fdf1

--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
     I love to learn and teach others, I'm always looking for
     new ways to improve myself. I'm a big fan of the leanweb community.
   </p>
-
+  <p>You can find me on <a href="https://github.com/anthonydillon">GitHub</a> and <a href="https://twitter.com/anthonydillon">Twitter</a>.</p>
+  <p><a href="/feed.xml">RSS <svg height="1.2rem" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true" style="position:relative;top:3px;"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 5c7.18 0 13 5.82 13 13M6 11a7 7 0 017 7m-6 0a1 1 0 11-2 0 1 1 0 012 0z"></path></svg></a></p>
   <hr />
 
   
