--- a/src/about.html
+++ b/src/about.html
@@ -3,9 +3,12 @@ title: "About Anthony Dillon"
 layout: "base.html"
 ---
 
-<div class="l-main">
-  <h1>About me</h1>
-  <p>
-    Anthony Dillon is a Director of Engineering at Canonical. He leads the Web engineering teams, where he helps a rapidly-growing organisation scale its architecture and engineering practices. He is passionate about open source and excels in developing solid design systems to enable rapid, sustainable delivery through decentralised decision-making with a focus on results. When not working, Anthony enjoys running, playing football and spending time with his family.
-  </p>
-</div>
+  <div class="col-4">
+    <img src="{{ '/img/anthony.png' | url }}" alt="" />
+  </div>
+  <div class="col-8">
+    <h1>About me</h1>
+    <p>
+      Anthony Dillon is a Director of Engineering at Canonical. He leads the Web engineering teams, where he helps a rapidly-growing organisation scale its architecture and engineering practices. He is passionate about open source and excels in developing solid design systems to enable rapid, sustainable delivery through decentralised decision-making with a focus on results. When not working, Anthony enjoys running, playing football and spending time with his family.
+    </p>
+  </div>
