--- a/src/engineering.html
+++ b/src/engineering.html
@@ -3,19 +3,18 @@ title: "Engineering thoughts from Anthony Dillon"
 layout: "base.html"
 ---
 
-<div class="l-main">
-  <h1>Engineering</h1>
-  <p>
-    As a developer engineering solutions for over 20 years I have thoughts on the topic and ways I prefer to work. I do less day to day coding but I feel I have a good sense for complexity and helping to define a elegant solution.
-  </p>
+<h1>Engineering</h1>
+<p>
+  As a developer engineering solutions for over 20 years I have thoughts on the topic and ways I prefer to work. I do less day to day coding but I feel I have a good sense for complexity and helping to define a elegant solution.
+</p>
 
-  <hr />
+<hr />
 
+<h2>Posts</h2>
+<div class="p-cards">
   {% for post in collections.engineering reversed %}
-  <a href='{{ post.url | url }}' class="blog-single">
-    <p class="title">{{ post.data.title }}</p>
-
-    <p class="description">{{ post.data.description }}</p>
+  <a href='{{ post.url | url }}' class="p-card">
+    <h4 class="p-card__title">{{ post.data.title }}</h4>
   </a>
   {% endfor %}
 </div>
