--- a/src/management.html
+++ b/src/management.html
@@ -3,19 +3,18 @@ title: "Mangement thoughts from Anthony Dillon"
 layout: "base.html"
 ---
 
-<div class="l-main">
-  <h1>Management</h1>
-  <p>
-    I a manager of enginnering teams for many years. I am always learning and growning as a leader but here are some things I have learnt so far.
-  </p>
+<h1>Management</h1>
+<p>
+  I a manager of enginnering teams for many years. I am always learning and growning as a leader but here are some things I have learnt so far.
+</p>
 
-  <hr />
+<hr />
 
+<h2>Posts</h2>
+<div class="p-cards">
   {% for post in collections.management reversed %}
-  <a href='{{ post.url | url }}' class="blog-single">
-    <p class="title">{{ post.data.title }}</p>
-
-    <p class="description">{{ post.data.description }}</p>
+  <a href='{{ post.url | url }}' class="p-card">
+    <h4 class="p-card__title">{{ post.data.title }}</h4>
   </a>
   {% endfor %}
 </div>
