Fix typo on the homepage
Thanks @nottrobin

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@ layout: "base.html"
 <h1>Some thoughts</h1>
 <p>
   I am a software developer, with a passion for building things that
-  people love to use. I working as an Director of Enginnering at Canonical.
+  people love to use. I working as an Director of Engineering at Canonical.
 </p>
 <p>
   I love to learn and teach others, I'm always looking for
