deploy: 7420372a4ef4def390e0a99513d342875d0e923b

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <h1>Some thoughts</h1>
 <p>
   I am a software developer, with a passion for building things that
-  people love to use. I working as an Director of Enginnering at Canonical.
+  people love to use. I working as an Director of Engineering at Canonical.
 </p>
 <p>
   I love to learn and teach others, I'm always looking for
@@ -120,7 +120,8 @@
   <h4 class="p-card__title">Ant FM</h4>
 </a>
 
-</div></main>
+</div>
+</main>
   </div>
 </body>
 </html>
